# monero-c

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  monero-c.sln
.github/workflows/: build-linux-arm64.yml  build-linux-x64.yml  build-macos-arm64.yml  build-macos-x64.yml  build-windows-arm64.yml  build-windows-x64.yml  build.yml  release.yml
ConsoleApp/: Program.cs
MoneroC/: CMakeLists.txt
MoneroC/src/: monero_abi_bridge.cpp
NativeLib/: CMakeLists.txt  Source.cpp
NativeLib/src/: Source.cpp
docs/: architecture.drawio
src/: monero_api_c.cpp  monero_api_c.h
src/daemon/: monero_daemon_bridge.h
src/utils/: debug.hpp  monero_utils_bridge.cpp  monero_utils_bridge.h  utils.cpp  utils.hpp
src/wallet/: monero_wallet_bridge.cpp  monero_wallet_bridge.h
test/: test_monero_utils.c  test_monero_utils.cpp
